# wishgifthub-api/src/main/java/com/wishgifthub/entity/Invitation.java
@@ -1,11 +1,19 @@
 package com.wishgifthub.entity;
 
-import jakarta.persistence.*;
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.ManyToOne;
+import jakarta.persistence.Table;
+import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
-import lombok.AllArgsConstructor;
+
 import java.time.OffsetDateTime;
-import java.util.*;
+import java.util.UUID;
 
 @Entity
 @Table(name = "invitations")
@@ -33,6 +41,9 @@ public class Invitation {
 
     @Column(nullable = false)
     private boolean accepted = false;
+
+    @Column(name = "avatar_id")
+    private String avatarId;
 
     @Column(name = "created_at", nullable = false)
     private OffsetDateTime createdAt = OffsetDateTime.now();
